test/Transforms/InlineStructs/inline_structs_recursive_constrain_error.llzk
// RUN: llzk-opt -llzk-inline-structs -verify-diagnostics %s

module attributes {llzk.main = !struct.type<@Main>, llzk.lang} {
  // expected-error @+2 {{Cannot inline structs when a symbol-use cycle is reachable from a struct "@constrain" function.}}
  // expected-note @+1 {{cycle contains @loop}}
  function.def @loop() -> () attributes {function.allow_constraint} {
    function.call @loop() : () -> ()
    function.return
  }

  struct.def @Main {
    function.def @compute() -> !struct.type<@Main> {
      %self = struct.new : !struct.type<@Main>
      function.return %self : !struct.type<@Main>
    }

    function.def @constrain(%self: !struct.type<@Main>) {
      function.call @loop() : () -> ()
      function.return
    }
  }
}
